syntax = "proto3";

import "scalapb/scalapb.proto";

package com.iac.soc.backend.user.messages;

option (scalapb.options) = {
    single_file: true
    flat_package: true
};

message GetOrganizations {}

message Organization {
    int32 id = 1;
    string name = 2;
}

message Organizations {
    repeated Organization value = 1;
}

message GetSocUsers {
    int32 id = 1;
}

message GetUsersByOrganization {
    int32 id = 1;
}

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message Users {
    repeated User value = 1;
}
